@@ -35,6 +35,7 @@
 #include <gwenhywfar/debug.h>
 #include <gwenhywfar/crypt.h>
 #include <gwenhywfar/error.h>
+#include "crypt_l.h"
 #include <string.h>
 #include <stdlib.h>
 
@@ -247,13 +248,7 @@ int GWEN_Padd_PaddWithPkcs1Bt2(GWEN_BUFFER *buf, int dstSize){
   for (i=0; i<diff-11; i++) {
     int r;
 
-    while( (r=
-#ifdef HAVE_RANDOM
-	    random()
-#else
-	    rand()
-#endif
-	    & 0xff) == 0 );
+    while( (r=GWEN_Random() & 0xff) == 0 );
     *(p++)=(unsigned char)r;
   }
   *(p++)=0x00;
